[gd_scene load_steps=2 format=3 uid="uid://bkd3p8gj6hj2v"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="UIControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthLabel" type="Label" parent="UIControl"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
text = "Health: 100"

[node name="RoomLabel" type="Label" parent="UIControl"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 76.0
text = "Room: room_1_1"

[node name="SeedLabel" type="Label" parent="UIControl"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 106.0
text = "Seed: 123456789" 